* OTH#0000 Iteration on 8079. If service is eligibile set the eligibility status even if no default reason is set
* FEA#8079 If no accepting eligibility reason or one accepting eligibility reason is defined, accepting a claim service does not require chosing a reason. Same goes when refusing a service if there is only one refusal reason defined
* FEA#8076 UI enhancements on claim declaration process
* FEA#7983 Eligibility decisions for delivered services now have their own configuration model instead of using extras datas
* FEA#7782 Allow automatic refusal of a service from eligibility rules

Version 1.14 - 2017-11-09
* Add eligibility rejection wizard

Version 1.12 - 2017-04-28
* FEA#0000 Possibility to force validation or rejection of eligibility

Version 1.10 - 2016-11-02
* FEA#0000 Verify eligibility when scheduling an indemnification

Version 1.8 - 2016-07-06
* FEA#0000 Add accept/refuse benefit button on delivered service
* FEA#0000 Module creation