@@ -5,4 +5,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <field name="code"/>
     <field name="state"/>
+    <field name="sequence"/>
 </tree>
